@@ -13,7 +13,7 @@ envlist =
     ; codestyle,
     ; docstyle,
     mypy,
-    ; packaging
+    packaging
     print
 
 [testenv]
@@ -131,4 +131,4 @@ python =
     ; pypy-3.7: pypy3
     3.8: py38
     3.9: py39
-    3.10: py310, pep8, mypy, print
+    3.10: py310, pep8, mypy, print, packaging
